syntax="proto3";
option go_package = "user/";

message UserRequest {
  string nick_name = 1;
  string user_name = 2;
  string password = 3;
  string password_confirm = 4;
}

message UserResponse {
  int64 user_id = 1;
  string nick_name = 2;
  string user_name = 3;
}

message UserDetailResponse {
  UserResponse user = 1;
  int64 code = 2;
}

message UserCommonResponse {
  int64 code = 1;
  string msg = 2;
  string data = 3;
}

service UserService {
 rpc Login(UserRequest) returns(UserDetailResponse);
 rpc Register(UserRequest) returns(UserCommonResponse);
 rpc Logout(UserRequest) returns(UserCommonResponse);
}
